--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,17 @@
 language: node_js
+
+os:
+  - osx
+  - linux
+
 node_js:
   - '0.10'
   - '0.11'
+
 matrix:
   allow_failures:
     - node_js: '0.11'
+    - os: osx
+
 script:
   - grunt travis
